Updates to the Tutorial